building container for cmdstanr

--- a/test.Rmd
+++ b/test.Rmd
@@ -12,20 +12,35 @@ library(dplyr)
 library(magrittr)
 library(tidyr) # gather
 library(tibble) # rowtocolumn
-library(rstan)
 library(ape)
 library(phytools)
 library(geiger) # sim.char
 library(purrr) # keep
 library(posterior) # as_draws_df
 library(MASS)
-# library(devtools)
+# remove.packages("rstan")
+# if (file.exists(".RData")) file.remove(".RData")
+# install.packages("rstan", repos = "https://cloud.r-project.org/", dependencies = TRUE)
+library(rstan)
+library(devtools)
 # install_github("donaldRwilliams/chkptstanr")
 library(chkptstanr)
 # install.packages("cmdstanr", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
 library(cmdstanr)
-set_cmdstan_path("cmdstan-2.29.2")
+set_cmdstan_path("~/cmdstan-2.29.2")
 ```
+
+```{r}
+# pkgs = c("knitr", "ggplot2", 
+#          "gridExtra", "grid",
+#          "dplyr",
+#          "magrittr", "tidyr", "tibble", "rstan", "ape",
+#          "phytools", "geiger",
+#          "purrr", "posterior", "MASS",
+#          "chkptstanr", "cmdstanr")
+# lapply(pkgs, library, character.only = TRUE)
+```
+
 
 ```{r}
 stan_code <- "
@@ -66,10 +81,14 @@ stan_code_path = paste0(path, "/stan_model/model.stan")
 
 # run the analysis
 fit_m1 = chkpt_stan(model_code = stan_code, data = stan_data,
-                     iter_warmup = 1000, iter_sampling = 2000,
-                     iter_per_chkpt = 250,
-					 parallel_chains = 1, threads_per = 1,
-					 path = path)
+                    iter_warmup = 1000, iter_sampling = 2000,
+                    iter_per_chkpt = 250,
+                    parallel_chains = 1, threads_per = 1,
+                    path = path, 
+                    # cpp_options = list(stan_opencl = T) # whenever opencl is available
+)
+# unlink(path, recursive = T)
 ```
+
 
 
