update path for checkpoints

--- a/test.Rmd
+++ b/test.Rmd
@@ -71,9 +71,9 @@ stan_data <- list(n = 8,
                   sigma = c(15, 10, 16, 11,  9, 11, 10, 18))
 # important: need to check the path for rerun
 # here I assume that the folder will be created in the same directory
-name_folder = "stan_chkpt_test"
+name_folder = paste0("Results/checkpoints/", "stan_chkpt_", id, sep = "")
 if(dir.exists(name_folder)){
-  path = paste0("./", name_folder) # important: need to check the path
+  path = name_folder # important: need to check the path
 }else{
   path = create_folder(folder_name = name_folder)
 }
